# IGS-SI

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: route_optimisation_ACO.ipynb
examples/utils/: route_problem.py
src/preferendus/: __init__.py
src/preferendus/optimization/: __init__.py
src/preferendus/optimization/aco/: __init__.py  _aggregator.py  modo.py  optimization.py
tests/: conftest.py  test_aggregator.py  test_decorator_smoke.py
